Reasonably complete path selection from tree. Moved to separate plugin so it can be disabled without disabling sidebar tree. Expand/collapse icons now differ when a click would mean action and when overing a link so that a click would mean selection. Had to maintain custom "hovr" and "hovrselect" classes using js events because :hover would be inherited in the nested structure. Added simple indication in the form that an element has been selected, but haven't solved the case when the tree is expanded so much that the user does not see the destination field. Added expansion of root even when a preselected path is shown because there was no other way to expand root. Expanded root could potentially be very long so this might be a bad idea in scenarios where we always have a start path.
git-svn-id: https://optime.repos.se/svn/code/repos/trunk@5910 94f62164-8fde-0310-83d7-e1105c8c1596

--- a/repos-web/style/global.css
+++ b/repos-web/style/global.css
@@ -297,17 +297,23 @@ li.collapsed, li.expanded {
 li.collapsed {
 	list-style-image: url('commands/16x16/collapsedb.png');
 }
-li.collapsed:hover {
+li.collapsed.hovr {
 	list-style-image: url('commands/16x16/collapsedbr.png');
+}
+li.collapsed.hovrselect {
+	list-style-image: url('commands/16x16/collapsedbs.png');
 }
 li.folder.expanded {
 	list-style-image: url('commands/16x16/expandedb.png');
 }
-li.folder.expanded:hover {
+li.folder.expanded.hovr {
 	list-style-image: url('commands/16x16/expandedbr.png');
 }
+li.folder.expanded.hovrselect {
+	list-style-image: url('commands/16x16/expandedbs.png');
+}
 li.expandedempty {
-	list-style-image: url('commands/16x16/empty.png');
+	list-style-image: url('commands/16x16/empty.png') !important;
 }
 #commandbar #collapseall {
 	background-image: url('commands/24x24/collapseall.png');
